<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/shake"
        android:textSize="28sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:gravity="bottom|center"
        android:layout_weight="1.4"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="2">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="#000000"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"
            android:text="@string/newpass"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="#800000"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:text="____________"
            android:layout_weight="1"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="left|center"
            android:text="@string/length" />
            <TextView
                android:id="@+id/textView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="left|center"
                android:text=" (6)"/>
        </LinearLayout>
    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:max="8"
        android:layout_weight="1.3"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1.3">
        <CheckBox
            android:id="@+id/checkedTextView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/az"
            android:layout_weight="1"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/checkedTextView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zeronine"
            android:layout_weight="1"
            android:checked="true"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1.3">
            <CheckBox
                android:id="@+id/checkedTextView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/AZ"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/checkedTextView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/symbols"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

