<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:srcCompat="@drawable/avatar"
        android:layout_weight="2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/author"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|top"
            android:text="@string/authorWho"
            android:textColor="@color/colorText"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="#5c5c5c"
        android:textAppearance="?android:textAppearanceMedium"
        android:gravity="center|"
        android:text="@string/contact"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_button1"
        android:text="@string/sendbutton"
        android:onClick="onMail"
        android:layout_weight="0.6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05">
    </LinearLayout>

</LinearLayout>

